--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div class="wrapper">
     <!-- Navigation -->
     <nav class="main-nav">
-        <img src="img/assassins-creed.png" height="80" width="80"/>
+        <img src="img/Mario.png" height="100" width="100"/>
+        <img src="img/Mario.png" height="100" width="100"/>
         <ul>
             <li>
                 <a href="#">Home</a>
@@ -24,7 +25,7 @@
                 <a href="#">Contact</a>
             </li>
             <li>
-                <a href="https://web.njit.edu/~sm2782/flayout/index.html">F Layout</a>
+                <a href="#">F Resume</a>
             </li>
         </ul>
     </nav>
@@ -32,9 +33,8 @@
     <!-- Top Container -->
     <section class="top-container">
         <header class="showcase">
-            <h1>Your Web Developments</h1>
+            <h1>Final Group Project</h1>
             <p>IS 117 Intro to web development</p>
-            <a href="#" class="btn">Read More</a>
         </header>
     </section>
 
