--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="#">Contact</a>
             </li>
             <li>
-                <a href="#">F Resume</a>
+                <a href="skills.html">F Resume</a>
             </li>
         </ul>
     </nav>
